Opened 10 years ago

Closed 10 years ago

#5566 closed defect (fixed)

mpegts autodetection regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mpegts probe regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

The sample attached to ticket #580 is not autodetected since ee7a642b0e5da1730cfc66008d2f2976fa37a692 - related to ticket #4862

$ ffmpeg -i dump_cut.ts
ffmpeg version N-80007-g8767470 Copyright (c) 2000-2016 the FFmpeg developers
  built with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --enable-libx264
  libavutil      55. 24.100 / 55. 24.100
  libavcodec     57. 42.100 / 57. 42.100
  libavformat    57. 36.100 / 57. 36.100
  libavdevice    57.  0.101 / 57.  0.101
  libavfilter     6. 45.100 /  6. 45.100
  libswscale      4.  1.100 /  4.  1.100
  libswresample   2.  0.101 /  2.  0.101
  libpostproc    54.  0.100 / 54.  0.100
[mp2 @ 0x3685aa0] Header missing
    Last message repeated 23 times
[mpeg @ 0x3684280] pes_ext 4B is invalid
[mp2 @ 0x3685aa0] Header missing
    Last message repeated 27 times
[mpeg @ 0x3684280] decoding for stream 0 failed
[mpeg @ 0x3684280] start time for stream 0 is not set in estimate_timings_from_pts
[mpeg @ 0x3684280] pes_ext 4B is invalid
    Last message repeated 2 times
[mpeg @ 0x3684280] Could not find codec parameters for stream 0 (Audio: mp2, 0 channels, s16p): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpeg, from 'dump_cut.ts':
  Duration: N/A, bitrate: N/A
    Stream #0:0[0x1d3]: Audio: mp2, 0 channels, s16p
At least one output file must be specified

Change History (1)

comment:1 by Michael Niedermayer, 10 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.