avformat/mpegts: Fix probing of mpegts with invalid ASC

Fixes Ticket5566

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>